--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
             </div>
           </div>
         </div>
+
         <div id="secondarycontent" class="col-lg-4 p-3 bg-light">
           <div id="receptmeny">
             <h4>Recept</h4>
@@ -593,6 +594,16 @@
           </div>
         </div>
       </div>
+
+      <input type="text" class="live-search-box" placeholder="search here" />
+
+      <ul class="live-search-list">
+        <li>Lorem</li>
+        <li>ipsum</li>
+        <li>dolor</li>
+        <li>sit</li>
+        <li>amet</li>
+      </ul>
     </div>
     <script
       src="scripts/jquery.min.js"
